Finals Checks to 45:30

--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
                 <h2 class="section-title">Skills</h2>
                 <span class="section-subtitle">My Technical Level</span>
 
+                <div class="skills-container container grid">
+                    <div>
+                        <!--==================== SKILLS 1====================-->
+                        <div class="skills-content">
+                            <div class="skills-header">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== QUALIFICATION ====================-->
