Update information in HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-        
+        <!--==================== FONT AWESOME ====================-->
+        <script src="https://kit.fontawesome.com/cbf695508f.js" crossorigin="anonymous"></script>
+
         <!--==================== SWIPER CSS ====================-->
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
         
@@ -85,20 +87,12 @@
                         </div>
 
                         <div class="home-img">
-                            <svg class="home-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                              <mask id="mask0" mask-type="alpha">
-                                <path d="M40.8,-43.1C51.8,-29.8,58.8,-14.9,57.8,-1C56.9,13,47.9,26,36.9,33C26,40,13,41,-3.9,44.8C-20.7,48.7,-41.4,55.4,-56.2,48.4C-71,41.4,-79.8,20.7,-75.2,4.6C-70.6,-11.5,-52.5,-22.9,-37.7,-36.2C-22.9,-49.5,-11.5,-64.5,1.7,-66.3C14.9,-68,29.8,-56.4,40.8,-43.1Z" transform="translate(100 100)" />
-                              </mask>
-                              <g  mask="url(#mask0)">
-                                <path d="M40.8,-43.1C51.8,-29.8,58.8,-14.9,57.8,-1C56.9,13,47.9,26,36.9,33C26,40,13,41,-3.9,44.8C-20.7,48.7,-41.4,55.4,-56.2,48.4C-71,41.4,-79.8,20.7,-75.2,4.6C-70.6,-11.5,-52.5,-22.9,-37.7,-36.2C-22.9,-49.5,-11.5,-64.5,1.7,-66.3C14.9,-68,29.8,-56.4,40.8,-43.1Z" transform="translate(100 100)" />
-                                <image class="home-blob-img" x="20" y="30" xlink:href="assets/images/Pan.PNG">
-                              </g>
-                            </svg>
+                            <img src="assets/images/about 2.jpg" alt="" class="about-img">
                         </div>
                         <div class="home-data">
                             <h1 class="home-title">Hi, I'm Tom</h1>
-                            <h3 class="home-subtitle">Student Developer</h3>
-                            <p class="home-description">I do quite well for a stretch, then at the end of the sentence I say the wrong cranberry.</p>
+                            <h3 class="home-subtitle">Junior Developer</h3>
+                            <p class="home-description">Student Software Developer with Code Institute</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me<i class="uil uil-comment-dots button-icon"></i>
                             </a>
@@ -124,22 +118,22 @@
                     <img src="assets/images/about 2.jpg" alt="" class="about-img">
                     <div class="about-data"></div>
                         <p class="about-description">
-                            Qualified Primary School Teacher, looking for a new purpose.
+                            Student Software Developer with Code Institute. Experienced Worker with a demonstrated history of working with Children. Strong administrative professional with a BA in Primary Education from University of Wales Trinity Saint David.
                         </p>
                         <div class="about-info">
                             <div>
-                                <span class="about-info-title">0</span>
-                                <span class="about-info-name"> Something  <br> Experience </span>
+                                <span class="about-info-title"><i class="uil uil-html5-alt"></i></span>
+                                <span class="about-info-name"> HTML5 </span>
                             </div>
 
                             <div>
-                                <span class="about-info-title">0</span>
-                                <span class="about-info-name"> Something  <br> Experience </span>
+                                <span class="about-info-title"><i class="fab fa-css3-alt"></i></span>
+                                <span class="about-info-name"> Cascading Style Sheets </span>
                             </div>
 
                             <div>
-                                <span class="about-info-title">0</span>
-                                <span class="about-info-name"> Something  <br> Experience </span>
+                                <span class="about-info-title"><i class="fab fa-python"></i></span>
+                                <span class="about-info-name"> Python</span>
                             </div>
                         </div>
 
